@@ -21,6 +21,7 @@ src/gui/widgets/debug.cpp
 src/gui/widgets/event_handler.cpp
 src/gui/widgets/grid.cpp
 src/gui/widgets/helper.cpp
+src/gui/widgets/horizontal_scrollbar.cpp
 src/gui/widgets/image.cpp
 src/gui/widgets/label.cpp
 src/gui/widgets/listbox.cpp
