@@ -164,6 +164,8 @@ const std::string& tgui_definition::read(const config& cfg)
  * @start_table = widget_definition
  *     button_definition             A push button.
  *     image_definition              An image.
+ *     horizontal_scrollbar_definition 
+ *                                   A horizontal scrollbar.
  *     menubar_definition            A menubar which is used in menus and the
  *                                   tabbar in a tabcontrol.
  *     minimap_definition            A minimap to show the gamemap, this only
@@ -207,6 +209,8 @@ const std::string& tgui_definition::read(const config& cfg)
 
 	/***** Control definitions *****/
 	load_definitions<tbutton_definition>("button", cfg.get_children("button_definition"));
+	load_definitions<thorizontal_scrollbar_definition>
+		("horizontal_scrollbar", cfg.get_children("horizontal_scrollbar_definition"));
 	load_definitions<timage_definition>("image", cfg.get_children("image_definition"));
 	load_definitions<tlabel_definition>("label", cfg.get_children("label_definition"));
 	load_definitions<tlistbox_definition>("listbox", cfg.get_children("listbox_definition"));
@@ -495,6 +499,69 @@ tbutton_definition::tresolution::tresolution(const config& cfg) :
  */
 
 	// Note the order should be the same as the enum tstate is button.hpp.
+	state.push_back(tstate_definition(cfg.child("state_enabled")));
+	state.push_back(tstate_definition(cfg.child("state_disabled")));
+	state.push_back(tstate_definition(cfg.child("state_pressed")));
+	state.push_back(tstate_definition(cfg.child("state_focussed")));
+}
+
+thorizontal_scrollbar_definition::
+		thorizontal_scrollbar_definition(const config& cfg) : 
+	tcontrol_definition(cfg)
+{
+	DBG_G_P << "Parsing horizontal scrollbar " << id << '\n';
+
+	load_resolutions<tresolution>(cfg.get_children("resolution"));
+}
+
+thorizontal_scrollbar_definition::tresolution::tresolution(const config& cfg) :
+	tresolution_definition_(cfg),
+	minimum_positioner_length(
+		lexical_cast_default<unsigned>(cfg["minimum_positioner_length"])),
+	maximum_positioner_length(
+		lexical_cast_default<unsigned>(cfg["maximum_positioner_length"])),
+	left_offset(lexical_cast_default<unsigned>(cfg["left_offset"])),
+	right_offset(lexical_cast_default<unsigned>(cfg["right_offset"]))
+{
+/*WIKI
+ * @page = GUIToolkitWML
+ * @order = 1_widget_vertical_scrollbar
+ *
+ * == Horizontal scrollbar ==
+ *
+ * The definition of a horizontal scrollbar. This class is most of the time not
+ * used directly. Instead it's used to build other items with scrollbars.
+ *
+ * The resolution for a horizontal scrollbar also contains the following keys:
+ * @start_table = config
+ *     minimum_positioner_length (unsigned)
+ *                                     The minumum size the positioner is
+ *                                     allowed to be. The engine needs to know
+ *                                     this in order to calculate the best size
+ *                                     for the positioner.  
+ *     maximum_positioner_length (unsigned = 0)
+ *                                     The maximum size the positioner is
+ *                                     allowed to be. If minimum and maximum are
+ *                                     the same value the positioner is fixed
+ *                                     size. If the maximum is 0 (and the
+ *                                     minimum not) there's no maximum.
+ *     left_offset (unsigned = 0)      The number of pixels at the left which
+ *                                     can't be used by the positioner.
+ *     right_offset (unsigned = 0)     The number of pixels at the right which
+ *                                     can't be used by the positioner.
+ * @end_table
+ *
+ * The following states exist:
+ * * state_enabled, the horizontal scrollbar is enabled.
+ * * state_disabled, the horizontal scrollbar is disabled.
+ * * state_pressed, the left mouse button is down on the positioner of the horizontal scrollbar.
+ * * state_focussed, the mouse is over the positioner of the horizontal scrollbar.
+ */
+
+	VALIDATE(minimum_positioner_length, 
+		missing_mandatory_wml_key("resolution", "minimum_positioner_length"));
+
+	// Note the order should be the same as the enum tstate is scrollbar.hpp.
 	state.push_back(tstate_definition(cfg.child("state_enabled")));
 	state.push_back(tstate_definition(cfg.child("state_disabled")));
 	state.push_back(tstate_definition(cfg.child("state_pressed")));
